Implement progress tab

--- a/locale/en-US/mdci.dtd
+++ b/locale/en-US/mdci.dtd
@@ -5,3 +5,4 @@
 <!ENTITY generateMDC.label								"Generate...">
 <!ENTITY sourceIdl.label								"idl">
 <!ENTITY tabSource.label								"Source">
+<!ENTITY tabProgress.label								"Progress">
