Cleanup for publishing.

--- a/locale/en-US/mdni.dtd
+++ b/locale/en-US/mdni.dtd
@@ -1,8 +1,6 @@
 <!ENTITY prefwindow.label								"MDN Interface Documentation Generator">
 <!ENTITY generator.label								"Generator">
 <!ENTITY source.group.caption							"Source IDL">
-<!ENTITY loadIDL.label									"Load...">
 <!ENTITY generateMDN.label								"Generate...">
-<!ENTITY sourceIdl.label								"idl">
-<!ENTITY tabSource.label								"Source">
-<!ENTITY tabProgress.label								"Progress">
+<!ENTITY sourceIdl.label								"Interface:">
+<!ENTITY tabProgress.label								"Interface/Progress">
