Finished making strings localizable.

--- a/locale/en-US/mdni.properties
+++ b/locale/en-US/mdni.properties
@@ -1,1 +1,28 @@
-selectIDLTitle=Select the IDL file you wish to convert
+MethodOverview=Method overview
+MethodOverview_Name=Method_overview
+Attributes=Attributes
+Attributes_Name=Attributes
+Attribute=Attribute
+Type=Type
+Description=Description
+Constants=Constants
+Constants_Name=Constants
+Constant=Constant
+Value=Value
+GeckoVersion=Gecko version
+Methods=Methods
+Methods_Name=Methods
+Parameters=Parameters
+Parameters_Name=Parameters
+Remarks=Remarks
+Remarks_Name=Remarks
+SeeAlso=See also
+SeeAlso_Name=See_also
+None=None.
+ReturnValue=Return value
+ReturnValue_Name=Return_value
+ReadOnly=Read only.
+ExceptionsThrown=Exceptions thrown
+ExceptionsThrown_Name=Exceptions_thrown
+MissingDescription=Missing Description
+MissingException=Missing Exception
