Change to asynchronous requests.

--- a/locale/en-US/mdni.dtd
+++ b/locale/en-US/mdni.dtd
@@ -3,5 +3,5 @@
 <!ENTITY source.group.caption							"Source IDL">
 <!ENTITY generateMDN.label								"Generate...">
 <!ENTITY linkMDN.label									"Open URL">
-<!ENTITY sourceIdl.label								"Interface:">
+<!ENTITY sourceInterface.label							"Interface:">
 <!ENTITY tabProgress.label								"Interface/Progress">
